[package]
name = "mc-server"
version = "0.1.0"
publish = false
authors = ["Jack Crump-Leys <jackcrumpleys@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/bevy_dylib",
]

[dependencies]
bevy = { version = "0.11" }
valence = { git = "https://github.com/valence-rs/valence" }

[build-dependencies]
embed-resource = "1.4"
