[package]
name = "mc-server"
version = "0.1.0"
publish = false
authors = ["Jack Crump-Leys <jackcrumpleys@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
valence = { git = "https://github.com/valence-rs/valence"}
rand = "0.8"
surrealdb = "1.0.0-beta.9+20230402"
tokio = "1.29.1"
serde = "1.0.171"

[build-dependencies]
embed-resource = "1.4"
